# gc-cimguizmo

./: .gitmodules  CMakeLists.txt  cimguizmo.cpp
generator/: generator.bat  preprocesed.h
generator/output/: definitions.json  definitions.lua
